# sleepybird

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: color.cc  color.h  main.cc  window.cc  window.h
